Added new images for body calc proj and about section

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                             <p class="about__text__p">Hello again! I'm a solution-oriented frontend web developer based out of Chattanooga, TN. I am passionate about bringing digital products to life and creating online experiences that are delightful to use. I am constantly building and learning new technologies to continue to grow my skills in web development.
                             </p>
 
-                            <p class="about__text__p">I spent 10+ years fine-tuning my communication and leadership skills with roles in customer service and higher education. My masters degree in Psychology fuels my curiosity and passion for AI and UX design. In my spare time I design + create custom garments and play superheros with my son.
+                            <p class="about__text__p">I spent 10+ years fine-tuning my communication and leadership skills with roles in customer service and higher education. I started my coding journey after being laid off unexpectedly. I then decided to take a career break to raise my son. Once he went to kindergarten I knew I was ready to pursue coding full time and I am loving every second of it! In my spare time I design + create custom garments and play superheros with my son.
                             </p>
                             <button class="btn btn-resume">
                                 <a href="images/rachel-dooley-resume.pdf" target="_blank" alt="resume">
@@ -257,7 +257,7 @@
 
                         </div>
                         <div class="about__photo-container reveal fade-left">
-                            <img class="about__photo" src="images/bio-img-skirt.JPG" alt="photo of author" />
+                            <img class="about__photo" src="images/rachel-bio-img.JPG" alt="photo of author" />
                         </div>
                     </div>
                 </div>
