--- a/project-body-calc.html
+++ b/project-body-calc.html
@@ -64,11 +64,9 @@
                     <div class="info-section">
 
                         <h2 class="info-section-title">Overview</h2>
-                            <p>This is a passion project that I built to use on my fashion blog. It will allow users
-                                to calculate their body shape which in turn will help them learn how to effectively style
-                                their particular body shape. I am passionate about the positive impact that having good style
-                                can have on your self esteem and wanted to use my coding skills to create a tool that will
-                                help make uncovering your personal style a little bit easier.
+                            <p>This is a passion project that I built to use on my fashion blog to help women discover their body shape and how to dress for it. I am passionate about the positive impact that having good style
+                            can have on your self esteem and wanted to use my coding skills to create a tool that will
+                            help make uncovering your personal style a little bit easier.
                             </p>
 
                         <h2 class="info-section-title">Objective</h2>
@@ -77,18 +75,19 @@
                             is beneficial to use as well as an explanation of what the user needs to do to receive a successful calculation.
                         </p>
 
+                        <p>I recently added an AI chatbot "stylist" that is available to the user once they input their information into the calculator and get to the results page. I was very excited to work with the OpenAI API and bring the power of AI to help women learn more about their body shape and how to feel good in their clothes.</p>
+
                         <p>This project is a work in progress. Future features will include:</p>
                         <ul>
                             <li>Links to articles about the users particular body shape</li>
-                            <li>An AI chatbot on hand to help explain and give guidance to the user about their body shape</li>
                             <li>Links to shoppable clothing items that are tailored for that particular body shape so the user
-                                has some ideas on what they should purchase for their shape.
+                            has some ideas on what they should purchase for their shape.
                             </li>
                         </ul>
                     </div>
                     <div class="info-breakdown">
                             <button class="live-link">
-                                <a href="https://body-shape-calculator.netlify.app" alt="website link" target="_blank">
+                                <a href="https://fashion-calculator-nextjs.vercel.app" alt="website link" target="_blank">
                                     See it live
                                 </a>
                             </button>
