Added fitness pro project

--- a/index.html
+++ b/index.html
@@ -112,6 +112,20 @@
                                     </a>
                                 </div>
                         </div>
+                        <div class="project-container project-fitness reveal fade-up">
+                            <img class="project-img" src="images/fitness-pro-min.png" alt="project" />
+                                <div class="overlay">
+                                    <a href="project-fitness-pro.html" alt="project page link" target="_blank">
+                                        <div class="overlay-text">
+                                           Fitness Pro Workout Tracker
+                                            <span class="overlay-subtext">
+                                                Track your workouts and see your progress.
+                                            </span>
+                                            <button class="overlay-btn">Learn More</button>
+                                        </div>
+                                    </a>
+                                </div>
+                        </div>
                         <div class="project-container project-chatbot reveal fade-up">
                             <img class="project-img" src="images/pollyglot-min.png" alt="project" />
                                 <div class="overlay">
@@ -126,7 +140,6 @@
                                     </a>
                                 </div>
                         </div>
-
                    </div>
                     <!-- End of Featured Projects Section -->
 
