--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rachel Dooley Portfolio</title>
+    <link rel="icon" href="images/favicon.ico" type="image/png">
     <!-- Stylesheet -->
     <link rel="stylesheet" href="css/main.css">
     <!-- Google fonts -->
